--- a/BaconEngine/BaconEngine.vcxproj.filters
+++ b/BaconEngine/BaconEngine.vcxproj.filters
@@ -24,12 +24,12 @@
     <ClCompile Include="ParticleSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Precompiled.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Random.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Vec2.h">
